# 4chan2txt

./: 4chan2txt.cabal  README.md
.stack-work/install/x86_64-linux/lts-3.14/7.10.2/flag-cache/: 4chan2txt-0.1.0.0-1b180a303ebad482964e9a708bd0157a
.stack-work/install/x86_64-linux/lts-3.14/7.10.2/pkgdb/: 4chan2txt-0.1.0.0-92f6ab6529d0c7ec4b1f3474216681cb.conf  package.cache
app/: .Main.hs.swo  .Main.hs.swp  Main.hs
lib/: b_07_12_2015.txt  b_08_12_2015.txt  b_09_02_2016.txt  b_26_1_2016.txt  g_08_12_2015_b.txt  hc_26_1_2016.txt  test.txt
src/: ChanTypes.hs  HTTPAction.hs  Parser.hs
