name:                4chan2txt
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/cirquit/4chan2txt#readme
license:             MIT
license-file:        LICENSE
author:              cirquit
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ChanTypes
                     , HTTPAction
                     , Parser
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , http-conduit
                     , bytestring
                     , text
  default-language:    Haskell2010

executable 4chan2txt
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , 4chan2txt
                     , aeson
                     , text
                     , http-conduit
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cirquit/4chan2txt
